# company-color

./: .gitignore  README.md
.github/workflows/: backend.yml  frontend.yml
backend/: Dockerfile  README.md  database.py  main.py  migration  migration.py  pyproject.toml  requirements.txt  sha1.py  test_main.http
backend/app/: config.py  crud.py  database.py  dtos.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/endpoints/: oauth.py  reply.py  search.py
backend/app/auth/: jwt.py
backend/app/core/: config.py  database.py  exceptions.py  logging_config.py
backend/app/crud/: __init__.py  company.py  reply.py  user.py
backend/app/models/: __init__.py  tCompanyInfo.py  tCoprcode.py  tGukminYungumData.py  tInfoReply.py  tUsers.py
backend/app/services/: dart_client.py  redis_service.py
backend/models/: tGukminYungumData.py
etc/: icon.ai  indexing.py  migration.py
frontend/: .env.development  .env.production  Dockerfile  ecosystem.config.js  eslint.config.js  index.html  next.config.js  package-lock.json  package.json  theme.js  vite.config.js
frontend/app/: error.js  globals.css  layout.js  not-found.js  page.js
frontend/app/businessInfo/: BounceText.jsx  BusinessDataView.jsx  BusinessStats.jsx  DartData.jsx  EmployeeChart.jsx  InfoPopover.jsx  metadata.js  page.js
frontend/app/rank/: RankTable.jsx  page.js
frontend/app/result/: SearchResultList.jsx  SearchStructuredData.jsx  metadata.js  page.js
frontend/app/siteInfo/: page.js
frontend/components/: AdsenseLoader.jsx  EmployeeChart.jsx  Footer.jsx  GoogleAd.jsx  Layout.jsx  MainRankTable.jsx  Navbar.jsx  Providers.jsx
frontend/constants/: regions.js
frontend/lib/api/: api.js  auth.js  axios.js  client.js
frontend/lib/hooks/: useBusinessData.js  useRankData.js  useSearchResults.js
frontend/lib/store/: loadingStore.js  pageStore.js
frontend/public/: ads.txt  manifest.json  robots.txt  sitemap.xml
frontend/src/: main.css  main.jsx  router.jsx
frontend/src/api/: api.js  axios.js
frontend/src/components/: BounceText.jsx  BusinessStats.jsx  EmployeeChart.jsx  Footer.jsx  InfoPopover.jsx  Layout.jsx  Navbar.jsx
frontend/src/pages/: BusinessInfo.jsx  ErrorPage.jsx  Home.jsx  Result.jsx  SiteInfo.jsx
frontend/src/utils/: auth.js  store.js
