[tool.poetry]
name = "company-color"
version = "0.1.0"
description = ""
authors = ["lch <ckcks1997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.1"
uvicorn = "^0.30.6"
aiomysql = "0.2.0"
annotated-types = "0.7.0"
anyio = "4.4.0"
click = "8.1.7"
colorama = "0.4.6"
databases = "0.9.0"
greenlet = "^3.1.0"
h11 = "0.14.0"
httptools = "0.6.1"
idna = "3.9"
mysql-connector-python = "9.0.0"
pydantic = "2.9.1"
pydantic-core = "^2.23.3"
pymysql = "1.1.1"
python-dotenv = "1.0.1"
pyyaml = "6.0.2"
sniffio = "1.3.1"
sqlalchemy = "^2.0.32"
sqlmodel = "^0.0.22"
starlette = "^0.38.5"
typing-extensions = "4.12.2"
watchfiles = "^0.24.0"
websockets = "^13.0.1"
pydantic-settings = "^2.4.0"
httpx = "^0.27.2"
python-jose = "^3.3.0"
redis = "^5.0.8"
elasticsearch = "^8.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
