[tool.poetry]
name = "company-color"
version = "1.0.0"
description = ""
authors = ["lch <ckcks1997@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
aiomysql = "0.2.0"
annotated-types = "0.7.0"
anyio = "4.4.0"
click = "8.1.8"
colorama = "0.4.6"
databases = "0.9.0"
greenlet = "^3.1.1"
h11 = "0.14.0"
httptools = "0.6.4"
idna = "3.10"
mysql-connector-python = "9.1.0"
pydantic = "2.10.4"
pydantic-core = "^2.27.2"
pymysql = "1.1.1"
python-dotenv = "1.0.1"
pyyaml = "6.0.2"
sniffio = "1.3.1"
sqlalchemy = "^2.0.36"
sqlmodel = "^0.0.22"
starlette = "^0.41.3"
typing-extensions = "4.12.2"
watchfiles = "^0.24.0"
websockets = "^13.1"
pydantic-settings = "^2.4.0"
httpx = "0.28.1"
python-jose = "^3.3.0"
redis = "^5.2.1"
elasticsearch = "^8.17.0"
concurrent-log-handler = "^0.9.25"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
